# graphmind

./: .gitignore  README.md  prepare.sh  pyproject.toml  start.sh
backend/: config.template.yaml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: datasets.py  documents.py  graph.py  indexing.py  search.py
backend/app/services/: dataset_service.py  document_service.py  graph_service.py  indexing_service.py  rag_engine.py  search_service.py
backend/app/utils/: file_parser.py  prompts.py  settings_generator.py
backend/graphmind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/graphrag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: README.md  conftest.py  test_config.py  test_dataset_service.py  test_discover_entity_types.py  test_document_service.py  test_graph_service.py  test_indexing_service.py  test_prompts.py  test_rag_engine.py  test_routers.py  test_schemas.py  test_search_service.py
doc/: API.md  PLAN.md  REFACTOR_PLAN.md  file_explain.md  原理.md  周易与中医学.TXT
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: DataBrowser.tsx  DatasetManager.tsx  GraphView.tsx  Layout.tsx  SearchQA.tsx
frontend/src/services/: api.ts
frontend/src/stores/: datasetStore.ts  searchStore.ts
graphrag_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
skills/: SKILL.md
test/: README.md  api_test.sh  conftest.py  test_api.py  test_datasets.py  test_documents.py  test_entity.py  test_graph.py  test_health_config.py  test_indexing.py  test_relationship.py  test_search.py  test_search_context.py  test_search_stream.py
