[project]
name = "graphmind-backend"
version = "1.0.0"
description = "GraphMind Backend - FastAPI server (LightRAG + RAG-Anything)"
requires-python = ">=3.10,<3.14"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "lightrag-hku[api]>=1.5.5",
    "raganything>=1.0.0",
    "mineru[core]>=2.0.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "requests>=2.34.2",
]
